fix: increase maincontent overlay z-index

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -93,6 +93,7 @@ $hover-highlight-color: #F6F8FA;
         width: 100%;
         background-color: #000;
         opacity: 0.4;
+        z-index: 110;
       }
 
       .content {
